--- a/index.html
+++ b/index.html
@@ -345,26 +345,30 @@ Hero Area
         data-opacity="9">
         <div class="container">
             <div class="row gx-80 flex-row-reverse align-items-center">
-                <div class="col-xl-5">
+                <div class="col-xl-4">
                     <div class="hero-thumb9-1">
                         <div class="img1">
                             <img src="assets/img/hero/hero_thumb_9_1.png" alt="img">
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-7">
+                <div class="col-xl-8">
                     <div class="hero-style9">
                         <!-- <span class="sub-title4">Turning Lands Into Landmarks</span> -->
                         <h1 class="hero-title text-theme">Mindscape Construction</h1>
-                        <p style="color: white; font-size: 20px; font-weight: 600; text-transform: uppercase;">Turning
-                            Lands Into Landmarks</p>
-                        <p class="hero-text">At Mindscape Constructions, we bring your vision to life with precision,
+                        <p style="color: #DFCAA0; font-size: 20px; font-weight: 600; text-transform: uppercase;">
+                            <i>
+                                "Turning Lands Into Landmarks"
+                            </i>
+                        </p>
+                        <p class="hero-text" style="color: #F6E3BA;">At Mindscape Constructions, we bring your vision to
+                            life with precision,
                             quality, and dedication. Based in Goa, we undertake all types of construction projects —
                             from luxury villas and residential complexes to commercial spaces and renovations. With a
                             commitment to on-time delivery and superior craftsmanship, we transform every project into a
                             lasting landmark.</p>
                         <div class="btn-wrap">
-                            <a href="contact.html" class="th-btn style4 th-btn-icon">Contact Us</a>
+                            <a href="contact.html" class="th-btn style4 th-btn-icon">Let's Build Together</a>
                         </div>
                     </div>
                 </div>
@@ -397,7 +401,10 @@ Hero Area
                             <img src="assets/img/feature/2-1.jpg" alt="img">
                         </div>
                         <div class="media-body">
-                            <h3 class="box-title">Skilled & Experienced Team</h3>
+                            <h3 class="box-title"><span style="border-bottom: 2px solid var(--theme-color);">
+                                    Skilled &
+                                    Experienced Team
+                                </span></h3>
                             <p class="box-text">
                                 Our team comprises seasoned professionals with years of industry experience, ensuring
                                 expert guidance and reliable solutions for every project.
@@ -412,7 +419,8 @@ Hero Area
                             <img src="assets/img/feature/2-2.jpg" alt="img">
                         </div>
                         <div class="media-body">
-                            <h3 class="box-title">Modern Equipments</h3>
+                            <h3 class="box-title"><span style="border-bottom: 2px solid var(--theme-color);">Modern
+                                    Equipments</span></h3>
                             <p class="box-text">
                                 We use the latest tools and machinery to deliver precise results, improve efficiency,
                                 and maintain the highest quality standards.
@@ -427,7 +435,8 @@ Hero Area
                             <img src="assets/img/feature/2-3.jpg" alt="img">
                         </div>
                         <div class="media-body">
-                            <h3 class="box-title">Quality Craftsmanship</h3>
+                            <h3 class="box-title"><span style="border-bottom: 2px solid var(--theme-color);">Quality
+                                    Craftsmanship</span></h3>
                             <p class="box-text">
                                 Every product is crafted with precision, attention to detail, and a commitment to
                                 excellence to ensure long-lasting value.
@@ -442,7 +451,8 @@ Hero Area
                             <img src="assets/img/feature/2-4.jpg" alt="img">
                         </div>
                         <div class="media-body">
-                            <h3 class="box-title">On-Time Delivery</h3>
+                            <h3 class="box-title"><span style="border-bottom: 2px solid var(--theme-color);">On-Time
+                                    Delivery</span></h3>
                             <p class="box-text">
                                 We follow strict timelines and efficient processes to ensure that every project is
                                 delivered exactly when promised.
@@ -457,7 +467,9 @@ Hero Area
                             <img src="assets/img/feature/2-5.jpg" alt="img">
                         </div>
                         <div class="media-body">
-                            <h3 class="box-title">Cutting-Edge Technology</h3>
+                            <h3 class="box-title"><span
+                                    style="border-bottom: 2px solid var(--theme-color);">Cutting-Edge Technology</span>
+                            </h3>
                             <p class="box-text">
                                 We stay ahead of the curve by integrating the latest innovations and technologies to
                                 enhance performance and results.
@@ -472,7 +484,9 @@ Hero Area
                             <img src="assets/img/feature/2-6.jpg" alt="img">
                         </div>
                         <div class="media-body">
-                            <h3 class="box-title">Client-Centric Approach</h3>
+                            <h3 class="box-title"><span
+                                    style="border-bottom: 2px solid var(--theme-color);">Client-Centric Approach</span>
+                            </h3>
                             <p class="box-text">
                                 We focus on understanding our clients’ needs and delivering solutions that exceed
                                 expectations every time.
@@ -512,7 +526,7 @@ About Area
                 <div class="col-xl-6">
                     <div class="title-area mb-15">
                         <!-- <span class="sub-title4">About Us</span> -->
-                        <h2 class="sec-title"><i class="fa-solid fa-users"></i> About Us</h2>
+                        <h2 class="sec-title text-theme"><i class="fa-solid fa-users"></i> About Us</h2>
                         <!-- <h2 class="sec-title">Building the Future of Residential Living</h2> -->
                     </div>
                     <p class="sec-text mb-20" style="color: var(--theme-color);">At Mindscape Constructions, we
@@ -521,8 +535,8 @@ About Area
                         craftsmanship, innovation, and trust to deliver spaces that inspire.
                     </p>
                     <p class="sec-text mb-20" style="color: var(--theme-color);">
-                            Based in Goa, we undertake all
-                            types of construction projects from luxury villas and residential complexes to commercial
+                        Based in Goa, we undertake all
+                        types of construction projects from luxury villas and residential complexes to commercial
                         spaces, renovations, and interiors. Our strength lies in blending modern technology with
                         time-tested building practices, ensuring every project is strong, sustainable, and uniquely
                         tailored to our client’s vision.
@@ -625,7 +639,7 @@ Property Area 4
                                 <div class="portfolio-img">
                                     <img src="assets/img/project/project_9_1.jpg" alt="project image">
                                 </div>
-                                <div class="box-content" style="background-color: var(--black-color2);">
+                                <!-- <div class="box-content" style="background-color: var(--black-color2);">
                                     <span class="box-subtitle" style="color: rgba(255, 255, 255, 0.7);">Residential
                                         Building</span>
                                     <h3 class="box-title"><a href="project-details.html"
@@ -637,7 +651,7 @@ Property Area 4
                                     <a href="project-details.html" class="th-btn style-border8 btn-sm th-btn-icon"
                                         style="color: rgba(255, 255, 255, 0.7);">View
                                         Details</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -646,7 +660,7 @@ Property Area 4
                                 <div class="portfolio-img">
                                     <img src="assets/img/project/project_9_2.jpg" alt="project image">
                                 </div>
-                                <div class="box-content" style="background-color: var(--black-color2);">
+                                <!-- <div class="box-content" style="background-color: var(--black-color2);">
                                     <span class="box-subtitle" style="color: rgba(255, 255, 255, 0.7);">Residential
                                         Building</span>
                                     <h3 class="box-title"><a href="project-details.html"
@@ -658,7 +672,7 @@ Property Area 4
                                     <a href="project-details.html" class="th-btn style-border8 btn-sm th-btn-icon"
                                         style="color: rgba(255, 255, 255, 0.7);">View
                                         Details</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -667,7 +681,7 @@ Property Area 4
                                 <div class="portfolio-img">
                                     <img src="assets/img/project/project_9_3.jpg" alt="project image">
                                 </div>
-                                <div class="box-content" style="background-color: var(--black-color2);">
+                                <!-- <div class="box-content" style="background-color: var(--black-color2);">
                                     <span class="box-subtitle" style="color: rgba(255, 255, 255, 0.7);">Residential
                                         Building</span>
                                     <h3 class="box-title"><a href="project-details.html"
@@ -679,7 +693,7 @@ Property Area 4
                                     <a href="project-details.html" class="th-btn style-border8 btn-sm th-btn-icon"
                                         style="color: rgba(255, 255, 255, 0.7);">View
                                         Details</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -688,7 +702,7 @@ Property Area 4
                                 <div class="portfolio-img">
                                     <img src="assets/img/project/project_9_1.jpg" alt="project image">
                                 </div>
-                                <div class="box-content" style="background-color: var(--black-color2);">
+                                <!-- <div class="box-content" style="background-color: var(--black-color2);">
                                     <span class="box-subtitle" style="color: rgba(255, 255, 255, 0.7);">Residential
                                         Building</span>
                                     <h3 class="box-title"><a href="project-details.html"
@@ -700,7 +714,7 @@ Property Area 4
                                     <a href="project-details.html" class="th-btn style-border8 btn-sm th-btn-icon"
                                         style="color: rgba(255, 255, 255, 0.7);">View
                                         Details</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -709,7 +723,7 @@ Property Area 4
                                 <div class="portfolio-img">
                                     <img src="assets/img/project/project_9_2.jpg" alt="project image">
                                 </div>
-                                <div class="box-content" style="background-color: var(--black-color2);">
+                                <!-- <div class="box-content" style="background-color: var(--black-color2);">
                                     <span class="box-subtitle" style="color: rgba(255, 255, 255, 0.7);">Residential
                                         Building</span>
                                     <h3 class="box-title"><a href="project-details.html"
@@ -721,7 +735,7 @@ Property Area 4
                                     <a href="project-details.html" class="th-btn style-border8 btn-sm th-btn-icon"
                                         style="color: rgba(255, 255, 255, 0.7);">View
                                         Details</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -730,7 +744,7 @@ Property Area 4
                                 <div class="portfolio-img">
                                     <img src="assets/img/project/project_9_3.jpg" alt="project image">
                                 </div>
-                                <div class="box-content" style="background-color: var(--black-color2);">
+                                <!-- <div class="box-content" style="background-color: var(--black-color2);">
                                     <span class="box-subtitle" style="color: rgba(255, 255, 255, 0.7);">Residential
                                         Building</span>
                                     <h3 class="box-title"><a href="project-details.html"
@@ -742,7 +756,7 @@ Property Area 4
                                     <a href="project-details.html" class="th-btn style-border8 btn-sm th-btn-icon"
                                         style="color: rgba(255, 255, 255, 0.7);">View
                                         Details</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -764,7 +778,7 @@ Counter Area
                         <div class="box-icon">
                             <img src="assets/img/icon/counter-4-1.svg" alt="img">
                         </div>
-                        <h2 class="box-number text-white"><span class="counter-number text-white">50</span>+</h2>
+                        <h2 class="box-number text-theme"><span class="counter-number text-theme">50</span>+</h2>
                         <p class="box-text text-white">Projects Completed</p>
                     </div>
                 </div>
@@ -773,7 +787,7 @@ Counter Area
                         <div class="box-icon">
                             <img src="assets/img/icon/counter-4-2.svg" alt="img">
                         </div>
-                        <h2 class="box-number text-white"><span class="counter-number text-white">50</span>+</h2>
+                        <h2 class="box-number text-theme"><span class="counter-number text-theme">50</span>+</h2>
                         <p class="box-text text-white">Quality Design</p>
                     </div>
                 </div>
@@ -782,7 +796,7 @@ Counter Area
                         <div class="box-icon">
                             <img src="assets/img/icon/counter-4-3.svg" alt="img">
                         </div>
-                        <h2 class="box-number text-white"><span class="counter-number text-white">10</span>k+</h2>
+                        <h2 class="box-number text-theme"><span class="counter-number text-theme">10</span>k+</h2>
                         <p class="box-text text-white">satisfied Clients</p>
                     </div>
                 </div>
@@ -791,7 +805,7 @@ Counter Area
                         <div class="box-icon">
                             <img src="assets/img/icon/counter-4-4.svg" alt="img">
                         </div>
-                        <h2 class="box-number text-white"><span class="counter-number text-white">5</span>k+</h2>
+                        <h2 class="box-number text-theme"><span class="counter-number text-theme">5</span>k+</h2>
                         <p class="box-text text-white">happy owners</p>
                     </div>
                 </div>
