--- a/home-1-op.html
+++ b/home-1-op.html
@@ -925,7 +925,8 @@ Why choose Us Area
                 </div>
             </div>
         </div>
-    </section><!--==============================
+    </section>
+    <!--==============================
 Property Area 2  
 ==============================-->
     <section class="space overflow-hidden bg-black2" id="property-sec">
