--- a/index.html
+++ b/index.html
@@ -328,7 +328,8 @@
                         </div>
                         <div class="col-auto d-none d-xxl-block">
                             <div class="header-button">
-                                <a href="contact.html" class="th-btn style4 th-btn-icon">GET A QUOTE</a>
+                                <a href="contact.html" class="th-btn style4 th-btn-icon" style="color: black">GET A
+                                    QUOTE</a>
                             </div>
                         </div>
                     </div>
@@ -368,7 +369,8 @@ Hero Area
                             commitment to on-time delivery and superior craftsmanship, we transform every project into a
                             lasting landmark.</p>
                         <div class="btn-wrap">
-                            <a href="contact.html" class="th-btn style4 th-btn-icon">Let's Build Together</a>
+                            <a href="contact.html" class="th-btn style4 th-btn-icon" style="color: black;">Let's Build
+                                Together</a>
                         </div>
                     </div>
                 </div>
@@ -529,30 +531,30 @@ About Area
                         <h2 class="sec-title text-theme"><i class="fa-solid fa-users"></i> About Us</h2>
                         <!-- <h2 class="sec-title">Building the Future of Residential Living</h2> -->
                     </div>
-                    <p class="sec-text mb-20" style="color: var(--theme-color);">At Mindscape Constructions, we
+                    <p class="sec-text mb-20" style="color: #F6E3BA;">At Mindscape Constructions, we
                         believe that every project is more than just a structure — it’s a story waiting to be built.
                         Founded with a vision to transform ideas into enduring landmarks, we bring together
                         craftsmanship, innovation, and trust to deliver spaces that inspire.
                     </p>
-                    <p class="sec-text mb-20" style="color: var(--theme-color);">
+                    <p class="sec-text mb-20" style="color: #F6E3BA;">
                         Based in Goa, we undertake all
                         types of construction projects from luxury villas and residential complexes to commercial
                         spaces, renovations, and interiors. Our strength lies in blending modern technology with
                         time-tested building practices, ensuring every project is strong, sustainable, and uniquely
                         tailored to our client’s vision.
                     </p>
-                    <p class="sec-text mb-20" style="color: var(--theme-color);">What sets us apart is our
+                    <p class="sec-text mb-20" style="color: #F6E3BA;">What sets us apart is our
                         hands-on approach — we listen, we plan, and we execute with precision, keeping you informed
                         every step of the way. With a team of skilled architects, engineers, and craftsmen, we are
                         committed to delivering on time, within budget, and above expectations.
                     </p>
-                    <p class="sec-text mb-20" style="color: var(--theme-color);">
+                    <p class="sec-text mb-20" style="color: #F6E3BA;">
                         At Mindscape Constructions, we don’t just build for today — we build for generations. Because
                         for us, it’s not just about construction, it’s about creating spaces that truly feel like home,
                         work, and legacy.
                     </p>
                     <!-- <h5 class="fw-medium mb-10" style="color: white;">Our Value</h5>
-                    <p class="sec-text mb-30" style="color: var(--theme-color);">Working closely with our partners
+                    <p class="sec-text mb-30" style="color: #F6E3BA;">Working closely with our partners
                         and clients, we blend industry
                         expertise, innovative techniques, and a commitment to quality to deliver exceptional living
                         spaces.</p>
