--- a/about.html
+++ b/about.html
@@ -356,7 +356,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="breadcumb-content">
-                        <h1 class="breadcumb-title">About Us</h1>
+                        <h1 class="breadcumb-title">Our Path, Our Purpose</h1>
                         <ul class="breadcumb-menu">
                             <li><a href="index.html">Home</a></li>
                             <li>About Us</li>
@@ -368,14 +368,13 @@
     </div><!--==============================
 About Area  
 ==============================-->
-    <div class="overflow-hidden space-top bg-smoke3" id="about-sec">
+    <div class="overflow-hidden space-top bg-black2" id="about-sec">
         <div class="container">
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-6">
                     <div class="title-area">
-                        <h2 class="sec-title" style="color: black;"><span
-                                style="border-bottom: 2px solid var(--theme-color);">Mindscape Constructions</span></h2>
-                        <p class="sec-text">We design & build homes, institutions, industries,
+                        <h2 class="sec-title text-theme"><span>Mindscape Constructions</span></h2>
+                        <p class="sec-text" style="color: #F6E3BA;">We design & build homes, institutions, industries,
                             townships,bridges, crematoriums, temples,
                             burial grounds- anything that qualifies as a Shelter.
                             Our designs intrinsically are
@@ -410,7 +409,7 @@ About Area
         </div>
     </div>
 
-    <section class="why-sec2 space-top bg-smoke3 overflow-hidden">
+    <section class="why-sec2 space-top bg-black2 overflow-hidden space-bottom">
         <div class="container">
             <div class="row gx-80 gy-60">
                 <div class="col-xl-4 col-lg-8">
@@ -423,19 +422,22 @@ About Area
                 <div class="col-xl-8">
                     <div class="title-area mb-40">
                         <!-- <span class="sub-title">Why Choose Us</span> -->
-                        <h2 class="sec-title" style="color: black;"><span
-                                style="border-bottom: 2px solid var(--theme-color);">About Us</span></h2>
-                        <p class="sec-text">We are a team of young architects, engineers and consultants, where
+                        <h2 class="sec-title text-theme"><span>About Us</span></h2>
+                        <p class="sec-text" style="color: #F6E3BA;">We are a team of young architects, engineers and
+                            consultants, where
                             construction is an intelligent outcome of creative engineering and
                             structured design & execution. Led by Mr.Praveen Maurya & team of
                             professional Civil & Structural Engineers and Architect by profession.</p>
-                        <p class="sec-text">We take pride in being a company taking on Big, only to do more
+                        <p class="sec-text" style="color: #F6E3BA;">We take pride in being a company taking on Big, only
+                            to do more
                             than justice to our Client’s interests and aspirations.</p>
-                        <p class="sec-text">We are an one stop shop for Architecture, Engineering, Electrical,
+                        <p class="sec-text" style="color: #F6E3BA;">We are an one stop shop for Architecture,
+                            Engineering, Electrical,
                             HVAC, Plumbing, Project Management , Real Estate and Property
                             Development. Clients find it convenient while we have a complete
                             control on creativity, costs and time. Works well for all.</p>
-                        <p class="sec-text">We operate from Panaji and we are workaholics. The team is of
+                        <p class="sec-text" style="color: #F6E3BA;">We operate from Panaji and we are workaholics. The
+                            team is of
                             Young dedicated, hardworking and a strange mixture of
                             professionals with an attitude to be nothing but the Best. For our
                             Client and for ourselves.
@@ -496,7 +498,8 @@ Service Area
                             </div>
                         </div>
                         <div class="box-content">
-                            <h3 class="box-title"><a class="text-title" href="service-details.html">Our Mission</a>
+                            <h3 class="box-title"><span style="border-bottom: 2px solid var(--theme-color);">Our
+                                    Mission</span>
                             </h3>
                             <p class="box-text text-body">To be the industry leader in construction excellence, known
                                 for innovation, quality, and sustainability. We envision a future where our projects not
@@ -515,8 +518,9 @@ Service Area
                             </div>
                         </div>
                         <div class="box-content">
-                            <h3 class="box-title"><a class="text-title" href="service-details.html">Our Vision
-                                </a></h3>
+                            <h3 class="box-title"><span style="border-bottom: 2px solid var(--theme-color);">Our
+                                    Vision</span>
+                            </h3>
                             <p class="box-text text-body">
                                 We stand on integrity, quality, and innovation. Guided by sustainability and
                                 responsibility, we build with purpose — creating trust, value, and lasting impact for
@@ -533,8 +537,8 @@ Service Area
                             </div>
                         </div>
                         <div class="box-content">
-                            <h3 class="box-title"><a class="text-title" href="service-details.html">Our Values
-                                </a></h3>
+                            <h3 class="box-title"><span style="border-bottom: 2px solid var(--theme-color);">Our
+                                    Values</span></h3>
                             <p class="box-text text-body">We prioritize strength and longevity with traditional masonry,
                                 reinforced concrete, and timber framing. Every structure is built on solid foundations,
                                 ensuring it stands the test of time while delivering unmatched stability
