--- a/about.html
+++ b/about.html
@@ -356,10 +356,10 @@
             <div class="row">
                 <div class="col-12">
                     <div class="breadcumb-content">
-                        <h1 class="breadcumb-title">Our Path, Our Purpose</h1>
+                        <h1 class="breadcumb-title" style="color: #F6E3BA;">Our Path, Our Purpose</h1>
                         <ul class="breadcumb-menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li>About Us</li>
+                            <li><a href="index.html" style="color: #F6E3BA;">Home</a></li>
+                            <li style="color: #F6E3BA;">About Us</li>
                         </ul>
                     </div>
                 </div>
@@ -368,7 +368,7 @@
     </div><!--==============================
 About Area  
 ==============================-->
-    <div class="overflow-hidden space-top bg-black2" id="about-sec">
+    <div class="overflow-hidden space-top space-bottom bg-black2" id="about-sec">
         <div class="container">
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-6">
@@ -487,7 +487,7 @@ About Area
     <!--==============================
 Service Area  
 ==============================-->
-    <section class="service-area-1 overflow-hidden space-bottom bg-smoke3 pt-80">
+    <!-- <section class="service-area-1 overflow-hidden space-bottom bg-smoke3 pt-80">
         <div class="container">
             <div class="row gy-40">
                 <div class="col-lg-4 col-md-6">
@@ -547,6 +547,116 @@ Service Area
                     </div>
                 </div>
             </div>
+        </div>
+    </section> -->
+
+    <section class="service-area-2 space bg-smoke" id="service-sec">
+        <div class="sec-bg-shape2-1 spin shape-mockup d-xl-block d-none" data-bottom="5%" data-left="12%">
+            <img src="assets/img/shape/section_shape_2_1.jpg" alt="img">
+        </div>
+        <div class="sec-bg-shape2-2 wave-anim shape-mockup d-xl-block d-none" data-top="-3%" data-left="5%"
+            data-bg-src="assets/img/shape/section_shape_2_2.jpg">
+        </div>
+        <div class="sec-bg-shape2-3 jump shape-mockup d-xl-block d-none" data-top="10%" data-right="2%">
+            <img src="assets/img/shape/section_shape_2_3.jpg" alt="img">
+        </div>
+        <div class="container">
+            <div class="row g-4">
+                <div class="service-card style2 col-lg-4">
+                    <div class="service-card-icon">
+                        <img src="assets/img/icon/service-icon2-1.svg" alt="Icon">
+                    </div>
+                    <h3 class="box-title">
+                        <span style="border-bottom: 2px solid var(--theme-color);">Our Mission</span>
+                    </h3>
+                    <p class="box-text" style="font-weight: 600;">To be the industry leader in construction excellence,
+                        known
+                        for innovation, quality, and sustainability. We envision a future where our projects not
+                        only stand as a testament to our expertise but also enrich communities and the
+                        environment. Our commitment to safety, innovation, and client satisfaction will continue
+                        to drive us, as we build a better tomorrow.</p>
+                    <div class="service-img img-shine">
+                        <img src="assets/img/bg/our-mission.jpg" alt="img">
+                    </div>
+                </div>
+                <div class="service-card style2 col-lg-4">
+                    <div class="service-card-icon">
+                        <img src="assets/img/icon/service-icon2-1.svg" alt="Icon">
+                    </div>
+                    <h3 class="box-title"><span style="border-bottom: 2px solid var(--theme-color);">
+                            Our
+                            Vision
+                        </span></h3>
+                    <p class="box-text" style="font-weight: 600;">We stand on integrity, quality, and innovation. Guided
+                        by sustainability and
+                        responsibility, we build with purpose — creating trust, value, and lasting impact for
+                        communities and future generations.</p>
+                    <div class="service-img img-shine">
+                        <img src="assets/img/bg/our-vision.jpg" alt="img">
+                    </div>
+                </div>
+                <div class="service-card style2 col-lg-4">
+                    <div class="service-card-icon">
+                        <img src="assets/img/icon/service-icon2-1.svg" alt="Icon">
+                    </div>
+                    <h3 class="box-title"><span style="border-bottom: 2px solid var(--theme-color);">
+                            Our
+                            Values
+                        </span></h3>
+                    <p class="box-text" style="font-weight: 600;">We prioritize strength and longevity with traditional
+                        masonry,
+                        reinforced concrete, and timber framing. Every structure is built on solid foundations,
+                        ensuring it stands the test of time while delivering unmatched stability
+                        and reliability.</p>
+                    <div class="service-img img-shine">
+                        <img src="assets/img/bg/our-values.jpg" alt="img">
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="swiper th-slider"
+                data-slider-options='{"breakpoints":{"0":{"slidesPerView":1},"576":{"slidesPerView":"1"},"768":{"slidesPerView":"2"},"992":{"slidesPerView":"2"},"1200":{"slidesPerView":"3"}}}'>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="service-card style2">
+                            <div class="service-card-icon">
+                                <img src="assets/img/icon/service-icon2-1.svg" alt="Icon">
+                            </div>
+                            <h3 class="box-title"><a href="service-details.html">Architectural Design</a></h3>
+                            <p class="box-text">Architects maintain communication with clients throughout the project,
+                                providing updates, and management of your properties.</p>
+                            <div class="service-img img-shine">
+                                <img src="assets/img/service/1-1.png" alt="img">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="service-card style2">
+                            <div class="service-card-icon">
+                                <img src="assets/img/icon/service-icon2-2.svg" alt="Icon">
+                            </div>
+                            <h3 class="box-title"><a href="service-details.html">Interior Design</a></h3>
+                            <p class="box-text">Architects maintain communication with clients throughout the project,
+                                providing updates, and management of your properties.</p>
+                            <div class="service-img img-shine">
+                                <img src="assets/img/service/1-2.png" alt="img">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="service-card style2">
+                            <div class="service-card-icon">
+                                <img src="assets/img/icon/service-icon2-3.svg" alt="Icon">
+                            </div>
+                            <h3 class="box-title"><a href="service-details.html">Renovation & Restoration</a></h3>
+                            <p class="box-text">Architects maintain communication with clients throughout the project,
+                                providing updates, and management of your properties.</p>
+                            <div class="service-img img-shine">
+                                <img src="assets/img/service/1-3.png" alt="img">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
         </div>
     </section>
 
