--- a/blog.html
+++ b/blog.html
@@ -360,10 +360,10 @@
             <div class="row">
                 <div class="col-12">
                     <div class="breadcumb-content">
-                        <h1 class="breadcumb-title">Blog Post</h1>
+                        <h1 class="breadcumb-title" style="color: #F6E3BA;">Blog Post</h1>
                         <ul class="breadcumb-menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li>Blog</li>
+                            <li><a href="index.html" style="color: #F6E3BA;">Home</a></li>
+                            <li style="color: #F6E3BA;">Blog</li>
                         </ul>
                     </div>
                 </div>
