--- a/service.html
+++ b/service.html
@@ -361,10 +361,10 @@
             <div class="row">
                 <div class="col-12">
                     <div class="breadcumb-content">
-                        <h1 class="breadcumb-title">Services</h1>
+                        <h1 class="breadcumb-title" style="color: #F6E3BA;">Services</h1>
                         <ul class="breadcumb-menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li>Services</li>
+                            <li><a href=" index.html" style="color: #F6E3BA;">Home</a></li>
+                            <li style="color: #F6E3BA;">Services</li>
                         </ul>
                     </div>
                 </div>
