--- a/about.html
+++ b/about.html
@@ -346,7 +346,6 @@
         </div>
     </header>
 
-
     <!--==============================
     Breadcumb
 ============================== -->
@@ -370,10 +369,24 @@ About Area
 ==============================-->
     <div class="overflow-hidden space-top space-bottom bg-black2" id="about-sec">
         <div class="container">
-            <div class="row justify-content-between align-items-center">
+            <div class="row justify-content-between">
                 <div class="col-lg-6">
                     <div class="title-area">
-                        <h2 class="sec-title text-theme"><span>Mindscape Constructions</span></h2>
+                        <h2 class="sec-title text-theme">
+                            <span>Mindscape Constructions</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="lucide lucide-construction-icon lucide-construction">
+                                <rect x="2" y="6" width="20" height="8" rx="1" />
+                                <path d="M17 14v7" />
+                                <path d="M7 14v7" />
+                                <path d="M17 3v3" />
+                                <path d="M7 3v3" />
+                                <path d="M10 14 2.3 6.3" />
+                                <path d="m14 6 7.7 7.7" />
+                                <path d="m8 6 8 8" />
+                            </svg>
+                        </h2>
                         <p class="sec-text" style="color: #F6E3BA;">We design & build homes, institutions, industries,
                             townships,bridges, crematoriums, temples,
                             burial grounds- anything that qualifies as a Shelter.
@@ -409,11 +422,11 @@ About Area
         </div>
     </div>
 
-    <section class="why-sec2 space-top bg-black2 overflow-hidden space-bottom">
+    <section class="why-sec2 bg-black2 overflow-hidden space-bottom">
         <div class="container">
             <div class="row gx-80 gy-60">
                 <div class="col-xl-4 col-lg-8">
-                    <div class="why-img-box2">
+                    <div class="why-img-box2" style="margin-top: 0; max-height: 470px;">
                         <div class="img1">
                             <img src="assets/img/normal/why_2_1.png" alt="Why">
                         </div>
@@ -422,7 +435,17 @@ About Area
                 <div class="col-xl-8">
                     <div class="title-area mb-40">
                         <!-- <span class="sub-title">Why Choose Us</span> -->
-                        <h2 class="sec-title text-theme"><span>About Us</span></h2>
+                        <h2 class="sec-title text-theme">
+                            <span>About Us</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="lucide lucide-hard-hat-icon lucide-hard-hat">
+                                <path d="M10 10V5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v5" />
+                                <path d="M14 6a6 6 0 0 1 6 6v3" />
+                                <path d="M4 15v-3a6 6 0 0 1 6-6" />
+                                <rect x="2" y="15" width="20" height="4" rx="1" />
+                            </svg>
+                        </h2>
                         <p class="sec-text" style="color: #F6E3BA;">We are a team of young architects, engineers and
                             consultants, where
                             construction is an intelligent outcome of creative engineering and
@@ -563,8 +586,16 @@ Service Area
         <div class="container">
             <div class="row g-4">
                 <div class="service-card style2 col-lg-4">
-                    <div class="service-card-icon">
-                        <img src="assets/img/icon/service-icon2-1.svg" alt="Icon">
+                    <div class="service-card-icon"
+                        style="border-color: var(--theme-color); background-color: var(--theme-color);">
+                        <!-- <img src="assets/img/icon/service-icon2-1.svg" alt="Icon"> -->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
+                            stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-goal-icon lucide-goal">
+                            <path d="M12 13V2l8 4-8 4" />
+                            <path d="M20.561 10.222a9 9 0 1 1-12.55-5.29" />
+                            <path d="M8.002 9.997a5 5 0 1 0 8.9 2.02" />
+                        </svg>
                     </div>
                     <h3 class="box-title">
                         <span style="border-bottom: 2px solid var(--theme-color);">Our Mission</span>
@@ -573,15 +604,25 @@ Service Area
                         known
                         for innovation, quality, and sustainability. We envision a future where our projects not
                         only stand as a testament to our expertise but also enrich communities and the
-                        environment. Our commitment to safety, innovation, and client satisfaction will continue
-                        to drive us, as we build a better tomorrow.</p>
+                        environment.</p>
                     <div class="service-img img-shine">
                         <img src="assets/img/bg/our-mission.jpg" alt="img">
                     </div>
                 </div>
                 <div class="service-card style2 col-lg-4">
-                    <div class="service-card-icon">
-                        <img src="assets/img/icon/service-icon2-1.svg" alt="Icon">
+                    <div class="service-card-icon"
+                        style="border-color: var(--theme-color); background-color: var(--theme-color);">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
+                            stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-scan-eye-icon lucide-scan-eye">
+                            <path d="M3 7V5a2 2 0 0 1 2-2h2" />
+                            <path d="M17 3h2a2 2 0 0 1 2 2v2" />
+                            <path d="M21 17v2a2 2 0 0 1-2 2h-2" />
+                            <path d="M7 21H5a2 2 0 0 1-2-2v-2" />
+                            <circle cx="12" cy="12" r="1" />
+                            <path
+                                d="M18.944 12.33a1 1 0 0 0 0-.66 7.5 7.5 0 0 0-13.888 0 1 1 0 0 0 0 .66 7.5 7.5 0 0 0 13.888 0" />
+                        </svg>
                     </div>
                     <h3 class="box-title"><span style="border-bottom: 2px solid var(--theme-color);">
                             Our
@@ -596,8 +637,18 @@ Service Area
                     </div>
                 </div>
                 <div class="service-card style2 col-lg-4">
-                    <div class="service-card-icon">
-                        <img src="assets/img/icon/service-icon2-1.svg" alt="Icon">
+                    <div class="service-card-icon"
+                        style="border-color: var(--theme-color); background-color: var(--theme-color);">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
+                            stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-handshake-icon lucide-handshake">
+                            <path d="m11 17 2 2a1 1 0 1 0 3-3" />
+                            <path
+                                d="m14 14 2.5 2.5a1 1 0 1 0 3-3l-3.88-3.88a3 3 0 0 0-4.24 0l-.88.88a1 1 0 1 1-3-3l2.81-2.81a5.79 5.79 0 0 1 7.06-.87l.47.28a2 2 0 0 0 1.42.25L21 4" />
+                            <path d="m21 3 1 11h-2" />
+                            <path d="M3 3 2 14l6.5 6.5a1 1 0 1 0 3-3" />
+                            <path d="M3 4h8" />
+                        </svg>
                     </div>
                     <h3 class="box-title"><span style="border-bottom: 2px solid var(--theme-color);">
                             Our
@@ -713,43 +764,46 @@ Process Area
             </div>
             <div class="row gy-4 justify-content-center">
                 <div class="col-xl-4 col-md-6">
-                    <div class="process-card2" data-bg-src="assets/img/bg/process-card2-bg.png">
+                    <div class="process-card2 bg-smoke" data-bg-src="assets/img/bg/process-card2-bg.png">
                         <div class="box-icon">
                             <img src="assets/img/icon/process_card_2_1.svg" alt="icon">
                         </div>
                         <div class="box-content">
-                            <h3 class="box-title">Consultation & Planning</h3>
-                            <p class="box-text">Conduct an initial assessment to understand client needs and project
+                            <p class="box-number">Step - 01</p>
+                            <h3 class="box-title" style="color: black;">Consultation & Planning</h3>
+                            <p class="box-text" style="color: black;">Conduct an initial assessment to understand client
+                                needs and project
                                 scope. Provide a detailed consultation, including design ideas, materials, and budget
                                 estimates.</p>
-                            <p class="box-number">Step - 01</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-6">
-                    <div class="process-card2" data-bg-src="assets/img/bg/process-card2-bg.png">
+                    <div class="process-card2 bg-smoke" data-bg-src="assets/img/bg/process-card2-bg.png">
                         <div class="box-icon">
                             <img src="assets/img/icon/process_card_2_2.svg" alt="icon">
                         </div>
                         <div class="box-content">
-                            <h3 class="box-title">Design & Development</h3>
-                            <p class="box-text">Begin demolition and structural modifications as per the approved plan.
+                            <p class="box-number">Step - 02</p>
+                            <h3 class="box-title" style="color: black;">Design & Development</h3>
+                            <p class="box-text" style="color: black;">Begin demolition and structural modifications as
+                                per the approved plan.
                                 Proceed with construction, installation, and finishing work (flooring, painting,
                                 fixtures, etc.).</p>
-                            <p class="box-number">Step - 02</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-6">
-                    <div class="process-card2" data-bg-src="assets/img/bg/process-card2-bg.png">
+                    <div class="process-card2 bg-smoke" data-bg-src="assets/img/bg/process-card2-bg.png">
                         <div class="box-icon">
                             <img src="assets/img/icon/process_card_2_3.svg" alt="icon">
                         </div>
                         <div class="box-content">
-                            <h3 class="box-title">Final Inspection & Handover</h3>
-                            <p class="box-text">Perform a comprehensive inspection to ensure the renovation meets
-                                quality standards. Make necessary adjustments or touch-ups based on client feedback.</p>
                             <p class="box-number">Step - 03</p>
+                            <h3 class="box-title" style="color: black;">Final Inspection & Handover</h3>
+                            <p class="box-text" style="color: black;">Perform a comprehensive inspection to ensure the
+                                renovation meets
+                                quality standards. Make necessary adjustments or touch-ups based on client feedback.</p>
                         </div>
                     </div>
                 </div>
@@ -768,7 +822,7 @@ Video Area
                     </div>
                     <div class="video-wrap-details bg-white">
                         <div class="title-area mb-45">
-                            <h2 class="sec-title">Why Choose Us For Builda Construction</h2>
+                            <h2 class="sec-title">Director's Message</h2>
                             <p class="sec-text">
                                 We design & build homes, restaurants, villas,
                                 institutions, industries, townships - anything that
@@ -802,7 +856,7 @@ Team Area
                 <div class="title-area">
                     <h2 class="sec-title text-center" style="color: black;">
                         <i class="fa fa-users" style="font-size: 38px;"></i>
-                        <span style="border-bottom: 2px solid var(--theme-color);"> Our Team Member </span>
+                        <span style="border-bottom: 2px solid var(--theme-color);"> Our Team Members </span>
                         <i class="fa fa-users" style="font-size: 38px;"></i>
                     </h2>
                 </div>
